@@ -32,8 +32,8 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
-    implementation 'org.springframework:spring-jdbc:6.0.15'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.22.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.3'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
