@@ -2,7 +2,7 @@
 <beans>
 
 	<bean id="manager" class="edu.mcw.rgd.dataload.ontologies.Manager">
-        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Jan 08, 2024" />
+        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Feb 12, 2024" />
 
         <!-- for security reasons, actual value of the API KEY should not be stored in public github code -->
         <property name="apiKeyFile" value="properties/api.key"/>
@@ -383,7 +383,7 @@
     </bean>
 
     <bean id="goTaxonConstraints" class="edu.mcw.rgd.dataload.ontologies.TaxonConstraints">
-        <property name="version" value="--GO Taxon Constraints   -- build Jun 21, 2022 --" />
+        <property name="version" value="--GO Taxon Constraints   -- build Feb 12, 2024 --" />
 
         <property name="taxonUnionOboFile" value="https://raw.githubusercontent.com/geneontology/go-ontology/master/src/ontology/imports/go-taxon-groupings.obo" />
         <property name="neverInTaxonFile" value="https://raw.githubusercontent.com/geneontology/go-ontology/master/src/taxon_constraints/never_in_taxon.tsv" />
